@@ -7,6 +7,8 @@ UNRELEASED
 - Escape `KEY_PREFIX` and `VERSION` when used in glob expressions.
 - Improve handling timeouts less than 1ms.
 - Remove fakeredis support.
+- Add datetime, date, time, and timedelta serialization support to the JSON
+  serializer.
 
 
 Version 4.8.0
